# videonote

./: .gitignore  BUILD.md  BUILD_FIX_SUMMARY.md  BUILD_LOG_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  DEMO_SCRIPT.md  DYNAMIC_PORT_MIGRATION.md  FFMPEG_AUTO_PACKAGE_SUMMARY.md  FIX_SUMMARY.md  PYINSTALLER_LIMITATION.md  QUICK_START_CN.md  README.md  STAGE2_SUMMARY.md  STAGE3_STAGE4_SUMMARY.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_DEBUG_GUIDE.md  WINDOWS_DEPLOYMENT.md  WINDOWS_FIXES.md  WINDOWS_FIX_FINAL.md  WINDOWS_FIX_README.md  WINDOWS_FIX_SUMMARY.txt  WINDOWS_SIDECAR_FIX.md  WINDOWS_UPX_ISSUE.md  index.html  package.json  test_windows_build.ps1  troubleshoot.ps1  verify_windows_build.ps1  vite.config.ts
--name/src-tauri/: tauri.conf.json
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx  styles.css
src-python/: .gitignore  README.md  build_sidecar.py  build_sidecar.sh  download_ffmpeg.py  main.py  quick_test.sh  requirements.txt  run.sh  sidecar.spec.template  test_api.py  test_ffmpeg_download.py  vn-sidecar-aarch64-apple-darwin.spec
src-python/core/: __init__.py  downloader.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: main.rs
src/components/: DownloadPage.tsx  LogViewer.tsx
src/lib/: api.ts  devtools.ts
