[package]
name = "videonote"
version = "0.1.0"
description = "A video note-taking application"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.7.1"
tauri-plugin-fs = "2.4.4"
log = "0.4.29"

[features]
custom-protocol = ["tauri/custom-protocol"]
